# hyper_island_bi

./: .gitignore  README.md  app.py  archive.py  eda.ipynb  pyproject.toml  requirements.txt
pages/: Financial.py  Info.py  Key_Metrics.py  Sales_Funnel.py  Utilization.py
src/: data_processing.py  visualisation.py  visualization.py
