[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyper-island-bi"
version = "0.1.0"
description = "Streamlit dashboards for business intelligence metrics."
readme = "README.md"
authors = [{ name = "Hyper Island" }]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "plotly>=5.20.0"
]

[tool.setuptools.packages.find]
where = ["src"]
